implement private chat foundation
